# uio

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: cicd.yml
uio/: __init__.py  uio.py
uio/tests/: test_io.py
