[tool.poetry]
name = "uio"
version = "0.2.4"
description = "Universal IO (uio) library."
authors = ["AJ Steers <aj.steers@slalom.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
fire = "^0.4.0"
logless = "^0.2.2"
runnow = "^0.1.0"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
azure-storage-blob          = { optional = true, version = "^12.7.1" }
azure-storage-file-datalake = { optional = true, version = "^12.2.3" }
boto3                       = { optional = true, version = "^1.17.5" }
s3fs                        = { optional = true, version = "<0.5.2" }

[tool.poetry.extras]
aws = ["boto3", "s3fs"]
azure = ["azure-storage-blob", "azure-storage-file-datalake"]

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
uio = "uio.uio:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
